<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignupActivity">


    <!-- First TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/txtInputFullName"
        android:layout_marginTop="45dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:hint="@string/full_name"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id = "@+id/txtInputEditFullName"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Spacer (Adjustable) -->


    <!-- Second TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/txtInputPhoneNumber"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:hint="@string/phone_number"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/txtInputFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/txtInputPhoneEditTextNumber"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- "Verify Mobile Number" TextView -->
    <TextView
        android:id="@+id/textVerifyMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifyMobileNumber"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtInputPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <!-- "Sign Up" Button -->

    <!-- "Already have an account? Sign in" TextView -->
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"

        android:layout_marginEnd="16dp"
        android:text="@string/get_otp"
        android:theme="@style/BlackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVerifyMobileNumber" />

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <!-- "Already have an account?" TextView -->
        <TextView
            android:id="@+id/textAlreadyHaveAccount"
            android:padding = "2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account ?"
            android:textStyle="bold" />

        <!-- "Sign in" TextView -->
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:padding = "4dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"/>




    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
